tests destroied and rewritten